--- a/docs/styles.css
+++ b/docs/styles.css
@@ -63,7 +63,12 @@ html, body {
 .container {
     display: grid;
     height: 100%;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 20rem 1fr;
+}
+
+.icon {
+    width: 1.8rem;
+    height: 1.8rem;
 }
 
 .sidebar {
@@ -71,6 +76,31 @@ html, body {
     color: var(--color-theme-sidebar-text);
 
     grid-column: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+}
+
+.sidebar .icon {
+    filter: invert(1);
+    justify-self: end;
+
+}
+
+.sidebar .heading .icon {
+    width: 3rem;
+    height: 3rem;
+}
+.sidebar ul {
+    display: grid;
+    gap: 1rem;
+}
+
+.sidebar .heading, .sidebar li {
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+    gap: 1rem;
 }
 
 .page {
@@ -78,16 +108,11 @@ html, body {
     color: var(--color-theme-page-text);
 
     display: grid;
-    grid-template-rows: 15rem 1fr;
+    grid-template-rows: 12rem 1fr;
 }
 
 .page h1, .page h2, .page h3, .page h4, .page h5, .page h6 {
     color: var(--color-theme-page-headings);
-}
-
-.icon {
-    width: 2rem;
-    height: 2rem;
 }
 
 .avatar {
@@ -100,17 +125,86 @@ html, body {
 .header {
     background: var(--color-theme-page);
     grid-row: 1 / 2;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 2rem;
 }
 
-.header .welcome .avatar {
+.upper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 2rem;
+
+    align-items: center;
+}
+
+.search {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.search input {
+    appearance: none;
+    border: none;
+    border-radius: 1rem;
+    background: var(--color-theme-page-bg);
+    height: 2rem;
+    flex: 1;
+}
+
+.notifications {
+    justify-self: end;
+
+    display: grid;
+    grid-template-columns: 2rem 3rem 1fr;
+
+    align-items: center;
+    gap: 1rem;
+}
+
+.lower {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lower .welcome {
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+    align-items: center;
+    gap: 2rem;
+}
+
+.welcome .avatar {
     height: 4rem;
     width: 4rem;
+}
+
+.lower .links {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2rem;
+}
+
+.lower .links li {
+    background: var(--color-theme-sidebar-bg);
+    color: var(--color-theme-sidebar-text);
+
+    text-align: center;
+    width: 7rem;
+    padding: 0.5rem 1rem;
+    border-radius: 2rem;
 }
 
 .dashboard {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: min-content 1fr;
     gap: 0.8rem;
 
     padding: 1rem;
@@ -130,8 +224,12 @@ html, body {
 .card {
     background: var(--color-theme-page);
 
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     padding: 1rem;
+}
+
+.card.project {
+    border-left: 0.5rem solid var(--color-theme-user);
 }
 
 .announcements ul {
@@ -139,4 +237,17 @@ html, body {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     gap: 0.5rem;
+}
+
+.trending ul {
+    display: grid;
+    grid-auto-rows: 3rem;
+    gap: 0.5rem;
+}
+
+.trending li {
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+    gap: 0.5rem;
+    align-items: center;
 }
