Edit sidebar theme

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,7 +6,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 16px;
 
-    --color-theme-sidebar-bg: #083344;
+    --color-theme-sidebar-bg: #0284c7;
     --color-theme-sidebar-text: white;
 
     --color-theme-page: #f8fafc;
